# habit-tracker

./: .coverage  .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yaml  dump.rdb  pyproject.toml  runner.py
.github/workflows/: deploy.yml
habit_tracker/: __init__.py  celery.py  pagination.py  settings.py  urls.py
habits/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_habit_created_at_habit_last_reminded_at.py  0003_alter_habit_options_alter_habit_execution_time_and_more.py
nginx/: default.conf
notifications/: admin.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
notifications/migrations/: 0001_initial.py  0002_alter_telegramaccount_options_and_more.py
users/: admin.py  models.py  serializers.py
